.metadata/.plugins/org.eclipse.cdt.ui/Ejercicio_Estructuras.build.log
19:12:49 **** Rebuild of configuration Debug for project Ejercicio_Estructuras ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\biblioteca_estructuras.o" "..\\src\\biblioteca_estructuras.c" 
..\src\biblioteca_estructuras.c: In function 'listarAlumno':
..\src\biblioteca_estructuras.c:146:39: warning: format '%f' expects argument of type 'double', but argument 7 has type 'char *' [-Wformat=]
  printf("\n%d\t%c\t%d\t%.2f\t%.2f\t%.2f\t%s\n",
                                       ^
..\src\biblioteca_estructuras.c:146:43: warning: format '%s' expects a matching 'char *' argument [-Wformat=]
  printf("\n%d\t%c\t%d\t%.2f\t%.2f\t%.2f\t%s\n",
                                           ^
..\src\biblioteca_estructuras.c: In function 'buscarLegajo':
..\src\biblioteca_estructuras.c:248:17: error: 'auxLegajo' undeclared (first use in this function)
   scanf("%d", &*auxLegajo);
                 ^~~~~~~~~
..\src\biblioteca_estructuras.c:248:17: note: each undeclared identifier is reported only once for each function it appears in

19:12:49 Build Failed. 1 errors, 2 warnings. (took 463ms)

